--- a/frontend/src/pages/utility/Utility.css
+++ b/frontend/src/pages/utility/Utility.css
@@ -1,4 +1,11 @@
-.settings-sidebar {
+.utility-layout {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    gap: 1rem;
+}
+
+.utility-sidebar {
     width: 40%;
     height: 100%;
     display: flex;
@@ -8,15 +15,8 @@
     gap: 1rem;
 }
 
-.settings-content {
+.utility-content {
     width: 60%;
     height: 100%;
     background-color: #F5F5F7;
-}
-
-.settings-layout {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    gap: 1rem;
 }
