--- a/frontend/src/pages/utility/UtilityFaceRecognition.css
+++ b/frontend/src/pages/utility/UtilityFaceRecognition.css
@@ -108,3 +108,42 @@
     justify-content: center;
     align-items: center;
 }
+
+.room-device {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.device-item {
+    width: 95%;
+    height: 2rem;
+    outline: 1px solid #e8dcdc;
+    border-radius: 0.3rem;
+    display: flex;
+    align-items: center;
+    gap: 0.6rem;
+    padding-left: 1rem;
+
+    &:hover {
+        cursor: pointer;
+        background-color: #e2dce9;
+    }
+}
+
+.device-management-form {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.add-room-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 3rem;
+}
