--- a/frontend/src/pages/setting/SettingsPersonalInformation.css
+++ b/frontend/src/pages/setting/SettingsPersonalInformation.css
@@ -15,7 +15,7 @@
     flex-direction: column;
     gap: 1rem;
     justify-content: start;
-    align-items: start;
+    align-items: center;
     padding-left: 1rem;
 }
 
